--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_STANDARD_REQUIRED ON)
 
 find_package(ZLIB)
+find_package(Threads)
 find_package(PkgConfig)
 pkg_check_modules(LIBPNG REQUIRED libpng)
 
