--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(gen_map Chunk.cc NBT.cc Region.cc Utils.cc blocks.cc main.cc worker.cc)
-target_include_directories(gen_map PRIVATE ${ZLIB_INCLUDE_DIRS} ${LIBPNG_INCLUE_DIRS})
-target_link_libraries(gen_map ${ZLIB_LIBRARIES} ${LIBPNG_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+add_executable(mcmap Chunk.cc NBT.cc Region.cc Utils.cc blocks.cc main.cc worker.cc)
+target_include_directories(mcmap PRIVATE ${ZLIB_INCLUDE_DIRS} ${LIBPNG_INCLUE_DIRS})
+target_link_libraries(mcmap ${ZLIB_LIBRARIES} ${LIBPNG_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
