--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ project(mcmap CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_STANDARD_REQUIRED ON)
 
+find_program(CLANG_FOUND "clang++")
+if(CLANG_FOUND)
+  set(CMAKE_CXX_COMPILER "clang++")
+endif()
+
 find_package(ZLIB)
 find_package(Threads)
 find_package(PkgConfig)
