Print progress bar on terminal

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(mcmap Chunk.cc PNG.cc Region.cc blocks.cc color.cc generator.cc logger.cc main.cc nbt.cc server.cc utils.cc worker.cc)
+add_executable(mcmap Chunk.cc PNG.cc Region.cc blocks.cc color.cc generator.cc logger.cc main.cc nbt.cc pretty_printer.cc server.cc utils.cc worker.cc)
 add_dependencies(mcmap block_colors_data)
 target_include_directories(mcmap PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS} ${LIBPNG_INCLUE_DIRS})
 target_include_directories(mcmap PRIVATE ${CMAKE_BINARY_DIR})
