--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.15)
 project(mcmap CXX)
+enable_testing()
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_STANDARD_REQUIRED ON)
@@ -11,6 +12,7 @@ endif()
 
 find_package(ZLIB)
 find_package(Threads)
+find_package(Boost COMPONENTS unit_test_framework)
 find_package(PkgConfig)
 pkg_check_modules(LIBPNG REQUIRED libpng)
 
