--- a/src/dir-locals.el.in
+++ b/src/dir-locals.el.in
@@ -1,1 +1,4 @@
-((nil . ((flycheck-clang-include-path . (list "@ZLIB_INCLUDE_DIRS@" "@PNG_INCLUDE_DIRS@" "@CMAKE_BINARY_DIR@")))))
+((nil . ((flycheck-clang-include-path . (list
+                                         "@LIBS_INCLUDE_DIRS_DIR_LOCALS@"
+                                         "@CMAKE_BINARY_DIR@"
+                                         "@PROJECT_SOURCE_DIR@/external/include")))))
