--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,11 @@
 add_executable(mcmap main.cc)
 add_dependencies(mcmap block_colors_data optlib)
+if(ZLIB_USE_EXTERNAL_PROJECT)
+  add_dependencies(mcmap zlib)
+endif()
+if(PNG_USE_EXTERNAL_PROJECT)
+  add_dependencies(mcmap png)
+endif()
 target_include_directories(mcmap PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUE_DIRS})
 target_include_directories(mcmap PRIVATE ${CMAKE_BINARY_DIR})
 target_include_directories(mcmap PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
