--- a/block/CMakeLists.txt
+++ b/block/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_executable(block_data_generator block_data_generator.cc)
 
 add_boost_test(block_data_generator_test blocks_generator_test block_data_generator.cc)
-target_compile_definitions(block_data_generator_test PRIVATE -DTEST)
+if(Boost_FOUND)
+  target_compile_definitions(block_data_generator_test PRIVATE -DTEST)
+endif()
 
 add_custom_target(block_colors_data DEPENDS block_colors_data.hh)
 
