Change project name to avoid using trademark

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,19 +1,19 @@
-add_executable(mcmap main.cc)
-add_dependencies(mcmap block_colors_data optlib)
+add_executable(pixel-terrain main.cc)
+add_dependencies(pixel-terrain block_colors_data optlib)
 if(ZLIB_USE_EXTERNAL_PROJECT)
-  add_dependencies(mcmap zlib)
+  add_dependencies(pixel-terrain zlib)
 endif()
 if(PNG_USE_EXTERNAL_PROJECT)
-  add_dependencies(mcmap png)
+  add_dependencies(pixel-terrain png)
 endif()
-target_include_directories(mcmap PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUE_DIRS})
-target_include_directories(mcmap PRIVATE ${CMAKE_BINARY_DIR})
-target_include_directories(mcmap PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(mcmap ${ZLIB_LIBRARIES} ${PNG_LIBRARIES}
+target_include_directories(pixel-terrain PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUE_DIRS})
+target_include_directories(pixel-terrain PRIVATE ${CMAKE_BINARY_DIR})
+target_include_directories(pixel-terrain PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
+target_link_libraries(pixel-terrain ${ZLIB_LIBRARIES} ${PNG_LIBRARIES}
   ${CMAKE_THREAD_LIBS_INIT} optlib)
 
 add_subdirectory(functions)
 add_subdirectory(logger)
 add_subdirectory(nbt)
 
-install(TARGETS mcmap DESTINATION bin)
+install(TARGETS pixel-terrain DESTINATION bin)
