--- a/src/functions/imagegen/CMakeLists.txt
+++ b/src/functions/imagegen/CMakeLists.txt
@@ -1,3 +1,3 @@
-target_sources(mcmap PRIVATE blocks.cc color.cc generator.cc worker.cc PNG.cc)
+target_sources(pixel-terrain PRIVATE blocks.cc color.cc generator.cc worker.cc PNG.cc)
 
 add_boost_test(color_test imagegen_color color_test.cc color.cc)
