Parse command-line argument in separated namespace

--- a/src/dir-locals.el.in
+++ b/src/dir-locals.el.in
@@ -1,4 +1,4 @@
-((nil . ((flycheck-clang-include-path . (list
+((c++-mode . ((flycheck-clang-include-path . (list
                                          "@LIBS_INCLUDE_DIRS_DIR_LOCALS@"
                                          "@CMAKE_BINARY_DIR@"
                                          "@PROJECT_SOURCE_DIR@/external/include")))))
