--- a/src/nbt/CMakeLists.txt
+++ b/src/nbt/CMakeLists.txt
@@ -1,1 +1,1 @@
-target_sources(pixel-terrain PRIVATE Chunk.cc Region.cc nbt.cc utils.cc)
+target_sources(pixel-terrain PRIVATE chunk.cc region.cc nbt.cc utils.cc)
