--- a/src/commands/server/CMakeLists.txt
+++ b/src/commands/server/CMakeLists.txt
@@ -1,5 +1,10 @@
-target_sources(pixel-terrain PRIVATE reader_unix.cc request.cc server.cc server_unix_socket.cc writer_unix.cc)
+target_sources(pixel-terrain PRIVATE request.cc server.cc)
+if(MSVC)
+  target_sources(pixel-terrain PRIVATE reader_generic.cc server_generic.cc writer_generic.cc)
+else()
+  target_sources(pixel-terrain PRIVATE reader_unix.cc server_unix_socket.cc writer_unix.cc)
+  add_boost_test(writer_unix_test blockserver_writer_unix writer_unix_test.cc writer_unix.cc)
+endif()
 
-add_boost_test(writer_unix_test blockserver_writer_unix writer_unix_test.cc writer_unix.cc)
 add_boost_test(writer_string_test blockserver_writer_string writer_string_test.cc writer_string.cc)
 add_boost_test(request_test blockserver_request request_test.cc request.cc)
