Move block_data_generator to tools directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,4 +44,4 @@ add_custom_command(OUTPUT ${PROJECT_SOURCE_DIR}/src/.dir-locals.el
 
 add_subdirectory(block)
 add_subdirectory(src)
-add_subdirectory(tools/editor-aux)
+add_subdirectory(tools)
