Generate static library for each modules

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(pixel-terrain main.cc)
+add_executable(pixel-terrain pixel_terrain.cc)
 add_dependencies(pixel-terrain block_colors_data optlib)
 if(ZLIB_USE_EXTERNAL_PROJECT)
   add_dependencies(pixel-terrain zlib)
@@ -6,14 +6,16 @@ endif()
 if(PNG_USE_EXTERNAL_PROJECT)
   add_dependencies(pixel-terrain png)
 endif()
-target_include_directories(pixel-terrain PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS} ${PNG_INCLUE_DIRS})
-target_include_directories(pixel-terrain PRIVATE ${CMAKE_BINARY_DIR})
-target_include_directories(pixel-terrain PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(pixel-terrain ${ZLIB_LIBRARIES} ${PNG_LIBRARIES}
-  ${CMAKE_THREAD_LIBS_INIT} optlib)
+target_link_libraries(pixel-terrain region_parser)
+target_link_libraries(pixel-terrain logger)
+target_link_libraries(pixel-terrain image_generator)
+target_link_libraries(pixel-terrain block_server)
+install(TARGETS pixel-terrain DESTINATION bin)
+
+add_executable(nbt2xml nbt_to_xml.cc)
+target_link_libraries(nbt2xml nbt_pull_parser)
+install(TARGETS nbt2xml DESTINATION bin)
 
 add_subdirectory(commands)
 add_subdirectory(logger)
 add_subdirectory(nbt)
-
-install(TARGETS pixel-terrain DESTINATION bin)
