--- a/src/nbt/CMakeLists.txt
+++ b/src/nbt/CMakeLists.txt
@@ -1,6 +1,4 @@
-target_sources(pixel-terrain PRIVATE chunk.cc region.cc nbt.cc utils.cc)
+add_library(region_parser STATIC chunk.cc region.cc nbt.cc utils.cc)
+target_include_directories(image_generator PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
 
-add_boost_test(nbt_pull_parser_test _nbt_pull_parser_test nbt_pull_parser.cc nbt_pull_parser_test.cc)
-
-add_executable(nbt2xml nbt_to_xml.cc nbt_pull_parser.cc)
-install(TARGETS nbt2xml DESTINATION bin)
+add_subdirectory(pull_parser)
