Build multiple binary for generator and server

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,33 @@
-add_executable(pixel-terrain pixel_terrain.cc)
-add_dependencies(pixel-terrain block_colors_data optlib)
+add_executable(terrain2png terrain2png.cc)
+add_dependencies(terrain2png block_colors_data optlib)
 if(ZLIB_USE_EXTERNAL_PROJECT)
-  add_dependencies(pixel-terrain zlib)
+  add_dependencies(terrain2png zlib)
 endif()
 if(PNG_USE_EXTERNAL_PROJECT)
-  add_dependencies(pixel-terrain png)
+  add_dependencies(terrain2png png)
 endif()
-target_link_libraries(pixel-terrain region_parser)
-target_link_libraries(pixel-terrain logger)
-target_link_libraries(pixel-terrain image_generator)
-target_link_libraries(pixel-terrain block_server)
-install(TARGETS pixel-terrain DESTINATION bin)
+target_include_directories(terrain2png PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
+target_link_libraries(terrain2png region_parser)
+target_link_libraries(terrain2png logger)
+target_link_libraries(terrain2png image_generator)
+install(TARGETS terrain2png DESTINATION bin)
 
-add_executable(nbt2xml nbt_to_xml.cc)
+add_executable(blockd blockd.cc)
+add_dependencies(blockd optlib)
+if(ZLIB_USE_EXTERNAL_PROJECT)
+  add_dependencies(blockd zlib)
+endif()
+target_include_directories(blockd PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
+target_link_libraries(blockd region_parser)
+target_link_libraries(blockd logger)
+target_link_libraries(blockd block_server)
+install(TARGETS blockd DESTINATION bin)
+
+add_executable(nbt2xml nbt2xml.cc)
 target_link_libraries(nbt2xml nbt_pull_parser)
 install(TARGETS nbt2xml DESTINATION bin)
 
-add_subdirectory(commands)
-add_subdirectory(logger)
+add_subdirectory(image)
 add_subdirectory(nbt)
+add_subdirectory(server)
+add_subdirectory(utils/logger)
