Introduce super build

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 __pycache__
 /build
 /block/block_colors.merged
-/src/.dir-locals.el
 /compile_flags.txt
+/src/.dir-locals.el
+/superbuild/build
+/third_party/zlib
+/third_party/libpng
+/third_party/regetopt
 /external
 /.vscode
