--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -19,8 +19,7 @@
 # SOFTWARE.
 
 add_library(block_server STATIC request.cc server.cc writer_string.cc)
-target_include_directories(block_server PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(block_server INTERFACE ${ZLIB_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(block_server INTERFACE ${CMAKE_THREAD_LIBS_INIT})
 target_link_libraries(block_server PRIVATE logger region_parser)
 
 if(MSVC)
