--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,42 +19,31 @@
 # SOFTWARE.
 
 add_executable(terrain2png terrain2png.cc)
-add_dependencies(terrain2png block_colors_data regetopt)
-if(ZLIB_USE_EXTERNAL_PROJECT)
-  add_dependencies(terrain2png zlib)
-endif()
-if(PNG_USE_EXTERNAL_PROJECT)
-  add_dependencies(terrain2png png)
-endif()
-target_include_directories(terrain2png PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
+add_dependencies(terrain2png block_colors_data)
 target_link_libraries(terrain2png region_parser)
 target_link_libraries(terrain2png logger)
 target_link_libraries(terrain2png image_generator)
-target_link_libraries(terrain2png regetopt)
+target_link_libraries(terrain2png regetopt_static)
 install(TARGETS terrain2png DESTINATION bin)
 
 add_executable(blockd blockd.cc)
-add_dependencies(blockd regetopt)
-if(ZLIB_USE_EXTERNAL_PROJECT)
-  add_dependencies(blockd zlib)
-endif()
 target_include_directories(blockd PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
 target_link_libraries(blockd region_parser)
 target_link_libraries(blockd logger)
 target_link_libraries(blockd block_server)
-target_link_libraries(blockd regetopt)
+target_link_libraries(blockd regetopt_static)
 install(TARGETS blockd DESTINATION bin)
 
 add_executable(nbt2xml nbt2xml.cc)
 target_include_directories(nbt2xml PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(nbt2xml nbt_pull_parser regetopt)
+target_link_libraries(nbt2xml nbt_pull_parser regetopt_static)
 install(TARGETS nbt2xml DESTINATION bin)
 
 add_executable(dumpnbt dumpnbt.cc)
 add_dependencies(dumpnbt regetopt)
 target_include_directories(dumpnbt PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
 target_link_libraries(dumpnbt region_parser)
-target_link_libraries(dumpnbt regetopt)
+target_link_libraries(dumpnbt regetopt_static)
 install(TARGETS dumpnbt DESTINATION bin)
 
 add_subdirectory(image)
