Inherit some variables

--- a/superbuild/CMakeLists.txt
+++ b/superbuild/CMakeLists.txt
@@ -47,7 +47,9 @@ set_directory_properties(PROPERTIES
 ExternalProject_Add(zlib
   PREFIX zlib
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/zlib
-  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${THIRD_PARTY_INSTALL_PREFIX})
+  CMAKE_ARGS
+  -DCMAKE_INSTALL_PREFIX=${THIRD_PARTY_INSTALL_PREFIX}
+  -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
 
 ExternalProject_Add(png
   PREFIX png
@@ -57,12 +59,15 @@ ExternalProject_Add(png
   -DZLIB_CONFIG_CMAKE=${THIRD_PARTY_INSTALL_PREFIX}/share/cmake/zlib/zlib-config.cmake
   -DPNG_BUILD_ZLIB=OFF
   -DZLIB_ROOT=${THIRD_PARTY_INSTALL_PREFIX}
+  -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
   DEPENDS zlib)
 
 ExternalProject_Add(regetopt
   PREFIX regetopt
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/regetopt
-  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${THIRD_PARTY_INSTALL_PREFIX})
+  CMAKE_ARGS
+  -DCMAKE_INSTALL_PREFIX=${THIRD_PARTY_INSTALL_PREFIX}
+  -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
 
 ExternalProject_Add(pixel-terrain
   PREFIX pixel-terrain
@@ -74,4 +79,6 @@ ExternalProject_Add(pixel-terrain
   -DPNG_CONFIG_CMAKE=${THIRD_PARTY_INSTALL_PREFIX}/lib/libpng/libpng16.cmake
   -DREGETOPT_CONFIG_CMAKE=${THIRD_PARTY_INSTALL_PREFIX}/lib/regetopt/regetopt-config.cmake
   -DPIXEL_TERRAIN_SUPER_BUILDING=ON
+  -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+  -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
   DEPENDS zlib png regetopt)
