--- a/src/nbt/CMakeLists.txt
+++ b/src/nbt/CMakeLists.txt
@@ -21,6 +21,6 @@
 add_library(region_parser STATIC chunk.cc region.cc utils.cc)
 target_include_directories(region_parser PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS})
 target_link_libraries(region_parser PRIVATE nbt_pull_parser)
-target_link_libraries(region_parser INTERFACE zlibstatic)
+target_link_libraries(region_parser PRIVATE zlibstatic)
 
 add_subdirectory(pull_parser)
