Support building usual way

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,7 @@ add_dependencies(terrain2png block_colors_data)
 target_link_libraries(terrain2png region_parser)
 target_link_libraries(terrain2png logger)
 target_link_libraries(terrain2png image_generator)
-target_link_libraries(terrain2png regetopt_static)
+target_link_libraries(terrain2png ${REGETOPT_MOD_NAME})
 install(TARGETS terrain2png DESTINATION bin)
 
 add_executable(blockd blockd.cc)
@@ -31,18 +31,18 @@ target_include_directories(blockd PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/
 target_link_libraries(blockd region_parser)
 target_link_libraries(blockd logger)
 target_link_libraries(blockd block_server)
-target_link_libraries(blockd regetopt_static)
+target_link_libraries(blockd ${REGETOPT_MOD_NAME})
 install(TARGETS blockd DESTINATION bin)
 
 add_executable(nbt2xml nbt2xml.cc)
 target_include_directories(nbt2xml PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
-target_link_libraries(nbt2xml nbt_pull_parser regetopt_static)
+target_link_libraries(nbt2xml nbt_pull_parser ${REGETOPT_MOD_NAME})
 install(TARGETS nbt2xml DESTINATION bin)
 
 add_executable(dumpnbt dumpnbt.cc)
 target_include_directories(dumpnbt PRIVATE SYSTEM ${PROJECT_SOURCE_DIR}/external/include)
 target_link_libraries(dumpnbt region_parser)
-target_link_libraries(dumpnbt regetopt_static)
+target_link_libraries(dumpnbt ${REGETOPT_MOD_NAME})
 install(TARGETS dumpnbt DESTINATION bin)
 
 add_subdirectory(image)
