--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-if(NOT PIXEL_TERRAIN_SUPER_BUILDING)
-  message(FATAL_ERROR "Currently, pixel-terrain supports only super build. Generate configuration file from superbuild/CMakeLists.txt.")
-  return()
-endif()
-
 cmake_minimum_required(VERSION 3.15)
 project(pixel-terrain CXX)
 
@@ -30,9 +25,26 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_STANDARD_REQUIRED ON)
 
 find_package(Threads REQUIRED)
-include(${ZLIB_CONFIG_CMAKE})
-include(${PNG_CONFIG_CMAKE})
-include(${REGETOPT_CONFIG_CMAKE})
+
+if(PIXEL_TERRAIN_SUPER_BUILDING)
+  include(${ZLIB_CONFIG_CMAKE})
+  include(${PNG_CONFIG_CMAKE})
+  include(${REGETOPT_CONFIG_CMAKE})
+
+  set(ZLIB_MOD_NAME zlibstatic)
+  set(PNG_MOD_NAME png_static)
+else()
+  find_package(ZLIB REQUIRED)
+  find_package(PNG REQUIRED)
+  if(NOT DEFINED REGETOPT_CONFIG_CMAKE)
+    message(FATAL_ERROR "Must provide REGETOPT_CONFIG_CMAKE. (If you don't have it, execute build_regetopt.sh and build it.)")
+  endif()
+  include(${REGETOPT_CONFIG_CMAKE})
+
+  set(ZLIB_MOD_NAME ZLIB::ZLIB)
+  set(PNG_MOD_NAME PNG::PNG)
+endif()
+set(REGETOPT_MOD_NAME regetopt_static)
 
 include(cmake/test_utils.cmake)
 
@@ -40,9 +52,9 @@ add_custom_target(generate_editor_aux DEPENDS
   ${PROJECT_SOURCE_DIR}/compile_flags.txt
   ${PROJECT_SOURCE_DIR}/src/.dir-locals.el)
 
-get_target_property(ZLIB_INCLUDE_DIRS zlibstatic INTERFACE_INCLUDE_DIRECTORIES)
-get_target_property(PNG_INCLUDE_DIRS png_static INTERFACE_INCLUDE_DIRECTORIES)
-get_target_property(REGETOPT_INCLUDE_DIRS regetopt_static INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(ZLIB_INCLUDE_DIRS ${ZLIB_MOD_NAME} INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(PNG_INCLUDE_DIRS ${PNG_MOD_NAME} INTERFACE_INCLUDE_DIRECTORIES)
+get_target_property(REGETOPT_INCLUDE_DIRS ${REGETOPT_MOD_NAME} INTERFACE_INCLUDE_DIRECTORIES)
 set(COMP_INCLUDE_DIRS "${ZLIB_INCLUDE_DIRS};${PNG_INCLUDE_DIRS};${REGETOPT_INCLUDE_DIRS};${CMAKE_BINARY_DIR}")
 unset(REGETOPT_INCLUDE_DIRS)
 unset(PNG_INCLUDE_DIRS)
