--- a/src/nbt/CMakeLists.txt
+++ b/src/nbt/CMakeLists.txt
@@ -23,4 +23,9 @@ target_include_directories(region_parser PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS})
 target_link_libraries(region_parser PRIVATE nbt_pull_parser)
 target_link_libraries(region_parser PRIVATE ${ZLIB_MOD_NAME})
 
+add_boost_test(nbt_utils_test nbt_utils_test utils_test.cc)
+if(TARGET nbt_utils_test)
+  target_link_libraries(nbt_utils_test region_parser)
+endif()
+
 add_subdirectory(pull_parser)
