--- a/src/nbt/CMakeLists.txt
+++ b/src/nbt/CMakeLists.txt
@@ -18,14 +18,14 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(region_parser STATIC chunk.cc region.cc utils.cc)
-target_include_directories(region_parser PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS})
-target_link_libraries(region_parser PRIVATE nbt_pull_parser)
-target_link_libraries(region_parser PRIVATE ${ZLIB_MOD_NAME})
+add_library(mcregion STATIC chunk.cc region.cc utils.cc)
+target_include_directories(mcregion PRIVATE SYSTEM ${ZLIB_INCLUDE_DIRS})
+target_link_libraries(mcregion PRIVATE nbtpullparser)
+target_link_libraries(mcregion PRIVATE ${ZLIB_MOD_NAME})
 
 add_boost_test(nbt_utils_test nbt_utils_test utils_test.cc)
 if(TARGET nbt_utils_test)
-  target_link_libraries(nbt_utils_test region_parser)
+  target_link_libraries(nbt_utils_test mcregion)
 endif()
 
 add_subdirectory(pull_parser)
