--- a/src/nbt/pull_parser/CMakeLists.txt
+++ b/src/nbt/pull_parser/CMakeLists.txt
@@ -18,9 +18,11 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 
-add_library(nbt_pull_parser STATIC nbt_pull_parser.cc)
+set(PULL_PARSER_SRCS nbt_pull_parser.cc)
+
+add_library(nbtpullparser STATIC ${PULL_PARSER_SRCS})
 
 add_boost_test(nbt_pull_parser_test _nbt_pull_parser_test nbt_pull_parser_test.cc)
 if(TARGET nbt_pull_parser_test)
-  target_link_libraries(nbt_pull_parser_test nbt_pull_parser)
+  target_link_libraries(nbt_pull_parser_test nbtpullparser)
 endif()
